[gd_scene load_steps=4 format=3 uid="uid://dktcvb6cvwvew"]

[ext_resource type="Script" uid="uid://ddnmbxwpa4lg7" path="res://ui/battle_prep_new/training_grounds/bonus_experience_spend/bonus_experience_spend.gd" id="1_7ugjl"]
[ext_resource type="Theme" uid="uid://c4lkfm562pmc7" path="res://resources/themes/StandardTheme.tres" id="1_kdf18"]
[ext_resource type="Texture2D" uid="uid://dh3wcg86jund3" path="res://resources/sprites/icons/arrow_icon.png" id="1_md5nf"]

[node name="BonusExperienceSpend" type="PanelContainer"]
offset_right = 300.0
offset_bottom = 103.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_kdf18")
script = ExtResource("1_7ugjl")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="BonusExperienceContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="BonusExperienceLabel" type="Label" parent="MarginContainer/VBoxContainer/BonusExperienceContainer"]
layout_mode = 2
text = "Bonus Experience:"

[node name="BonusExperienceValueLabel" type="Label" parent="MarginContainer/VBoxContainer/BonusExperienceContainer"]
layout_mode = 2
text = "0"

[node name="ExperienceGainContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ExperienceGainedPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/ExperienceGainContainer"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
focus_mode = 2

[node name="ExperienceGainValueLabel" type="Label" parent="MarginContainer/VBoxContainer/ExperienceGainContainer/ExperienceGainedPanel"]
layout_mode = 2
text = "+0"
horizontal_alignment = 1

[node name="LevelContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ExperienceGainContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
alignment = 2

[node name="LevelLabel" type="Label" parent="MarginContainer/VBoxContainer/ExperienceGainContainer/LevelContainer"]
layout_mode = 2
text = "Lv"

[node name="LevelValueLabel" type="Label" parent="MarginContainer/VBoxContainer/ExperienceGainContainer/LevelContainer"]
layout_mode = 2
text = "1"

[node name="LevelIncreaseIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/ExperienceGainContainer/LevelContainer"]
visible = false
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
texture = ExtResource("1_md5nf")

[node name="ExperienceContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ExperienceGainContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ExperienceLabel" type="Label" parent="MarginContainer/VBoxContainer/ExperienceGainContainer/ExperienceContainer"]
layout_mode = 2
text = "Exp"

[node name="ExperienceValueLabel" type="Label" parent="MarginContainer/VBoxContainer/ExperienceGainContainer/ExperienceContainer"]
layout_mode = 2
text = "0"

[connection signal="gui_input" from="MarginContainer/VBoxContainer/ExperienceGainContainer/ExperienceGainedPanel" to="." method="_on_experience_gained_panel_gui_input"]
